--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+Logbook==0.9.0
+matplotlib==1.4.3
+mock==1.0.1
+nose==1.3.4
 numpy==1.9.1
 pandas==0.15.2
 py==1.4.26
+pyparsing==2.0.3
 pytest==2.6.4
-python-dateutil==2.4.0
+python-dateutil==2.3
 pytz==2014.10
+requests==2.5.3
 six==1.9.0
 wsgiref==0.1.2
+zipline==0.7.0
